--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Memoria</title>
     <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
 
     <body>
         <header class="flex justify-center">
-            <img class="h-44 mt-2"
+            <img class="h-28 mt-4"
                 src="https://res.cloudinary.com/pruebaweb/image/upload/v1730989960/Mask_Group-2_iq2qlx.png" alt="Logo">
-            <img class="h-24 mt-10 ml-4"
+            <img class="h-14 mt-10 ml-4"
                 src="https://res.cloudinary.com/pruebaweb/image/upload/v1730990662/615cd27110121df3b8aa4cd89a42e98c_by3snz.png"
                 alt="memoria">
         </header>
+        <div class="flex justify-center">
+            <button id="music-control" class="text-4xl text-right text-yellow-600 focus:outline-none ">
+                <i class="fas fa-music"></i> <!-- Ícono inicial de nota musical -->
+            </button>
+        </div>
 
         <div id="level-buttons" class="flex justify-center mt-4">
             <button id="level-basic" class="level-button p-4 rounded h-6 mb-4"><img
