limpieza de codigo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <header class="flex justify-center">
-            <img class="h-28 mt-4"
+            <img class="h-28 mt-4 "
                 src="https://res.cloudinary.com/pruebaweb/image/upload/v1730989960/Mask_Group-2_iq2qlx.png" alt="Logo">
             <img class="h-14 mt-10 ml-4"
                 src="https://res.cloudinary.com/pruebaweb/image/upload/v1730990662/615cd27110121df3b8aa4cd89a42e98c_by3snz.png"
@@ -22,7 +22,7 @@
         </header>
         <div class="flex justify-center">
             <button id="music-control" class="text-4xl text-right text-yellow-600 focus:outline-none ">
-                <i class="fas fa-music"></i> <!-- Ícono inicial de nota musical -->
+                <i class="fas fa-music"></i> 
             </button>
         </div>
 
@@ -55,7 +55,7 @@
 
         <div id="gameover-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
             <div class="bg-white p-8 rounded-lg shadow-xl max-w-md w-full mx-4">
-                <!-- El contenido se insertará dinámicamente -->
+                
             </div>
         </div>
 
